# cckit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  rule.md  todo.md
cckit/: __init__.py  _cli.py  _cost.py  agent.py  exceptions.py  runner.py  types.py
cckit/_engine/: _stream_patch.py  collector.py  model_bridge.py  model_transport.py  sdk_bridge.py  sse_converter.py  state.py
cckit/_engine/_patches/: __init__.py  deepseek_reasoning.py
cckit/git/: __init__.py  gitlab_client.py  operations.py
cckit/middleware/: __init__.py  base.py  concurrency.py  logging.py  retry.py
cckit/sandbox/: __init__.py  config.py  workspace.py
cckit/skill/: __init__.py  provisioner.py
cckit/tools/: __init__.py  platform.py
clab/: __init__.py  _cli.py  _models.py  agent.py  exceptions.py  runner.py  types.py
clab/_engine/: __init__.py  collector.py  sdk_bridge.py
clab/git/: gitlab_client.py  operations.py
clab/middleware/: __init__.py  base.py  concurrency.py  logging.py  retry.py
clab/sandbox/: config.py  workspace.py
clab/skill/: __init__.py  provisioner.py
clab/tools/: __init__.py  platform.py
docs/superpowers/specs/: 2026-03-17-skills-support-design.md
examples/: README.md  code_modify_agent.py  fix_agent.py  mr_agent.py  sandbox_workspace_only.py
scripts/: e2e_test_code_modify_agent.py  smoke_test.py  test_code_modify_agent.py
src/: __init__.py
src/agents/: __init__.py  code_modify_agent.py  fix_agent.py
src/core/: __init__.py  config.py  exceptions.py  models.py
tests/: test_sandbox.py  test_smoke.py
(+22 files in other folders)
