[project]
name = "cckit"
version = "0.1.0"
description = "Claude Agent Builder — build multi-agent systems on Claude CLI"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk==0.1.48",
    "litellm>=1.82.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-gitlab>=4.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "hatchling>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cckit"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
